--- a/frontend/scorecard.html
+++ b/frontend/scorecard.html
@@ -159,6 +159,11 @@
     </div>
 
     <script>
+        // Check if user is logged in
+        if (!localStorage.getItem('loggedIn')) {
+            window.location.href = 'index.html';
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
             try {
                 console.log('Attempting to retrieve exam data...');
