--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -198,6 +198,12 @@
     </div>
 
     <!-- Load main script -->
+    <script>
+        // Check if user is logged in
+        if (!localStorage.getItem('loggedIn')) {
+            window.location.href = 'index.html';
+        }
+    </script>
     <script src="js/script.js"></script>
 </body>
 </html>
