--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -106,6 +106,11 @@
     </div>
 
     <script>
+        // Check if user is logged in
+        if (!localStorage.getItem('loggedIn')) {
+            window.location.href = 'index.html';
+        }
+
         // Enable Start Exam button only when checkbox is checked
         const checkbox = document.getElementById('agreeCheckbox');
         const startBtn = document.getElementById('startExamBtn');
