--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -1,4 +1,43 @@
-<!DOCTYPE html>
+    <div class="login-container">
+        <img src="logo.png" alt="Exam Logo" class="logo">
+        <form id="loginForm">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <button type="submit" id="loginButton">Login</button>
+            <p id="errorMsg" class="error"></p>
+        </form>
+    </div>
+    <script src="js/script.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', handleLogin);
+    </script>
+</body>    <div class="login-container">
+        <img src="logo.png" alt="Exam Logo" class="logo">
+        <form id="loginForm">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <button type="submit" id="loginButton">Login</button>
+            <p id="errorMsg" class="error"></p>
+        </form>
+    </div>
+    <script src="js/script.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', handleLogin);
+    </script>
+</body>    <div class="login-container">
+        <img src="logo.png" alt="Exam Logo" class="logo">
+        <form id="loginForm">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <button type="submit" id="loginButton">Login</button>
+            <p id="errorMsg" class="error"></p>
+        </form>
+    </div>
+    <script src="js/script.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', handleLogin);
+    </script>
+</body>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -204,6 +243,11 @@
             window.location.href = 'index.html';
         }
     </script>
-    <script src="js/script.js"></script>
+    <script src="js/questions.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script>
+        // Verify questions loaded
+        console.log('Questions loaded:', window.questionsData ? window.questionsData.length : 'Not loaded');
+    </script>
 </body>
 </html>
