Clean up exam.html structure and fix doctype

--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -1,4 +1,4 @@
-    <div class="login-container">
+    <!--DOCTYPE html><div class="login-container">
         <img src="logo.png" alt="Exam Logo" class="logo">
         <form id="loginForm">
             <input type="text" id="username" name="username" placeholder="Username" required>
@@ -37,7 +37,7 @@
     <script>
         document.getElementById('loginForm').addEventListener('submit', handleLogin);
     </script>
-</body>
+</body>-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
