--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('bg.png') no-repeat center center fixed;
+            background: url('bggibbli.jpeg') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
