--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -157,10 +157,10 @@
         #timer {
             font-size: 24px;
             font-weight: bold;
-            text-align: center;
+            text-align: right;
             margin: 20px 0px;
             color: #333;
-            padding: 10px;
+            padding: 1px;
             background: snow;
             border-radius: 5px;
             margin-top: 100px;
