--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -160,10 +160,10 @@
             text-align: right;
             margin: 20px 0px;
             color: #333;
-            padding: 1px;
+            padding-left:5px;
             background: snow;
             border-radius: 5px;
-            margin-top: 100px;
+            margin-top: 10px;
         }
         #timer.warning {
             color: #f44336;
