--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -160,7 +160,7 @@
             text-align: right;
             margin: 20px 0px;
             color: #333;
-            padding-left:15px;
+            padding-right:15px;
             background: snow;
             border-radius: 5px;
             margin-top: 10px;
