--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -187,7 +187,7 @@
             height: 40px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            background: #fff;
+            background: white;
             cursor: pointer;
             transition: all 0.2s;
             font-weight: bold;
