--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -160,7 +160,7 @@
             text-align: right;
             margin: 20px 0px;
             color: #333;
-            padding-right:200px;
+            padding-right:80px;
             background: snow;
             border-radius: 5px;
             margin-top: 10px;
@@ -196,11 +196,11 @@
             transform: scale(1.05);
         }
         .palette-btn.answered {
-            background: #e3f2fd;
+            background: green;
             border-color: #2196F3;
         }
         .palette-btn.marked {
-            background: #fff3e0;
+            background: purple;
             border-color: #ff9800;
         }
         .palette-btn.current {
