--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
        .logo {
-      width: 120px;
-      
+      max-width: 150px;
+       margin-bottom: 20px;
       margin-top:30%;
       margin-left:35%;
       
@@ -121,10 +121,10 @@
             margin-top: 10px;
             font-size: 14px;
         }
-        .logo {
+       /* .logo {
             max-width: 150px;
             margin-bottom: 20px;
-        }
+        }*/
     </style>
 </head>
 <body>
