--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
         }*/
         h3{
             text align:center;
-            
+            padding-left:30%;
         }
     </style>
 </head>
