--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,8 +126,8 @@
             margin-bottom: 20px;
         }*/
         h3{
-            text align:center;
-            padding-left:30%;
+            text-align:center;
+        
         }
     </style>
 </head>
